<resources>
    <string name="app_name">KfuTimeTable</string>

    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="person_page">Личный кабинет</string>
    <string name="TODO">TODO</string>

    <string name="please_try_again">Пожалуйта, попробуйте снова</string>
    <string name="report_successful">Отзыв успешно отправлен!</string>
    <string name="unable_load_image">Не удалось загрузить фото</string>
    <string name="mainscreen_menu_settings">Настройки</string>
    <string name="mainscreen_menu_leave_comment">Отправить отзыв</string>
    <string name="mainscreen_menu_faq">Справка</string>
    <string name="mainscreen_menu_account">Аккаунт</string>
    <string name="mainscreen_menu_timetable">Расписание</string>
    <string name="mainscreen_menu_exit">Выход</string>
    <string name="basicquestion">Часто задаваемые вопросы:</string>
    <string name="oftenquestion">Часто задаваемые вопросы:</string>
    <string name="questionaboutExit">Как выйти?</string>
    <string name="answerExit">Нажмите на кнопку “меню”, затем внизу найдите кнопку “выход” и нажмите на нее.</string>
    <string name="mainque">Часто задаваемые вопросы:</string>
    <string name="queExit">Как выйти?</string>
    <string name="ansexit">Нажмите на кнопку “меню”, затем внизу найдите кнопку “выход” и нажмите на нее.</string>
    <string name="quetIME">Почему не показывается расписание?</string>
    <string name="anstwo">Возможно пока не появилось официальное расписание или еще не разместили в приложении.</string>
    <string name="queFeedBack">Хотите оставить отзыв?</string>
    <string name="feddback">Оставить отзыв можно здесь....</string>
    <string name="send">Отправить</string>

    <string-array name="daysOfWeek">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="months">
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
    </string-array>

    <string-array name="days_short">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>

</resources>