<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.signinscreen.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/personPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/person_page"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imageLogo"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@id/imageLogo"
            app:layout_constraintTop_toBottomOf="@id/imageLogo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/formsradius"
            android:layout_marginTop="32dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personPageTitle" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/prompt_email"
            android:background="@drawable/formsradius"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginOrRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:gravity="center_vertical"
            android:background="@drawable/formsradius"
            android:text="@string/action_sign_in"
            android:textColor="#004F8C"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>