<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="341dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/questionstyle"
        android:elevation="4dp"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:paddingTop="8dp"
        android:text="@string/queFeedBack"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="338dp"
        android:layout_height="388dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/answerstyle"
        android:elevation="8dp"
        android:gravity="left"
        android:hint="@string/feddback"
        android:inputType="textCapWords"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:textColor="#898A8D"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="53dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/questionstyle"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

</androidx.constraintlayout.widget.ConstraintLayout>